2007-08-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-settings.c: store the selected paper-size.

2007-08-09  Sven Neumann  <sven@gimp.org>

	* app/gui/splash.c: tweaked label positons.

2007-08-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-preview.[ch]: while dragging the preview
	image, draw only an outline.

2007-08-09  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: tweaked spacings on the Color
	Management page.

2007-08-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c: fixed the behavior when
	changing the unit.

2007-08-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print.c: tweaked layout and changed labels to the
	terms used in the EOG print dialog.

2007-08-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.[ch]
	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print-settings.c: replaced the two Center buttons
	with a combo-box.

2007-08-08  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpui.defs: remove reference to now deprecated
	gimp_color_display_new() function.

2007-08-08  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpnumberpairentry.[ch]: formatting. Fixed use
	of instance private data, added missing parameter checks.

2007-08-08  Martin Nordholts  <martinn@svn.gnome.org>

	Renamed GimpRatioEntry to GimpNumberPairEntry, and generalized the
	code a lot, so that it can be used both for 'Fixed: Aspect ratio'
	and 'Fixed: Size'. Support is also added for having default values
	and a 'user overrided' value mode.

	* libgimpwidgets/gimpnumberpairentry.[ch]: Now contains the
	rewrite and generalization of GimpRatioEntry.
	(gimp_number_pair_entry_get_type)
	(gimp_number_pair_entry_new)
        (gimp_number_pair_entry_set_default_values)
	(gimp_number_pair_entry_set_values)
        (gimp_number_pair_entry_get_values): New libgimpwidget API.

	* app/widgets/gimppropwidgets.[ch] (gimp_prop_size_2d_new): Added