@@ -167,10 +167,15 @@ EXPORTS
 	gimp_memsize_entry_new
 	gimp_memsize_entry_set_value
 	gimp_menu_item_update
+	gimp_number_pair_entry_get_aspect
+	gimp_number_pair_entry_get_default_values
+	gimp_number_pair_entry_get_ratio
 	gimp_number_pair_entry_get_type
 	gimp_number_pair_entry_get_values
 	gimp_number_pair_entry_new
+	gimp_number_pair_entry_set_aspect
 	gimp_number_pair_entry_set_default_values
+	gimp_number_pair_entry_set_ratio
 	gimp_number_pair_entry_set_values
 	gimp_offset_area_get_type
 	gimp_offset_area_new
