@@ -1,3 +1,15 @@
+2007-08-09  Martin Nordholts  <martinn@svn.gnome.org>
+
+	* libgimpwidgets/gimpnumberpairentry.[ch}: Added properties for
+	most of the instance members, and updated API.
+	(gimp_number_pair_entry_get_aspect)
+	(gimp_number_pair_entry_get_default_values)
+	(gimp_number_pair_entry_get_ratio)
+	(gimp_number_pair_entry_set_aspect)
+	(gimp_number_pair_entry_set_ratio): Added API functions.
+
+	* libgimpwidgets/gimpwidgets.def: Updated.
+
 2007-08-09  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/print/print-settings.c: store the selected paper-size.
